# q-edge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
deploy/docker/: Dockerfile.api  Dockerfile.quantum
deploy/monitoring/: prometheus.yml
mobile_app/: README.md  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/kotlin/com/example/q_edge_mobile/: MainActivity.kt
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/test/: widget_test.dart
mobile_app/web/: index.html  manifest.json
src/: __init__.py
src/backend/: __init__.py  celery_app.py  main.py  security.py
src/mobile/: __init__.py  fl_client.py  pqc_transport.py
src/quantum/: __init__.py  aggregator.py  azure_connector.py  circuits.py  error_mitigation.py  kernels.py
tests/: conftest.py
tests/integration/: test_backend.py
tests/unit/: test_quantum.py
