[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q-edge"
version = "1.0.0"
description = "Federated Hybrid Quantum-Neural Network Platform for Mobile-Edge Environments"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ahmad Rasidi (Roy)", email = "roy@qedge.ai" }
]
maintainers = [
    { name = "Q-Edge Research Team", email = "research@qedge.ai" }
]
keywords = [
    "quantum-computing",
    "federated-learning",
    "quantum-machine-learning",
    "post-quantum-cryptography",
    "variational-quantum-circuits",
    "azure-quantum",
    "pennylane",
    "nisq"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    # Core Quantum Computing
    "pennylane>=0.33.0",
    "pennylane-qiskit>=0.33.0",
    "azure-quantum>=1.0.0",
    "qiskit>=1.0.0",
    
    # Machine Learning
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    
    # Federated Learning
    "flwr>=1.5.0",
    "pysyft>=0.8.0",
    
    # Backend Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Async & Task Queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "aio-pika>=9.3.0",
    
    # Azure SDK
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-mgmt-quantum>=1.0.0",
    
    # Post-Quantum Cryptography
    "liboqs-python>=0.8.0",
    "cryptography>=41.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Monitoring
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "prometheus-client>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.88.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-mermaid2-plugin>=1.1.0"
]
benchmarks = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/qedge-ai/q-edge"
Documentation = "https://docs.qedge.ai"
Repository = "https://github.com/qedge-ai/q-edge"
Issues = "https://github.com/qedge-ai/q-edge/issues"
Changelog = "https://github.com/qedge-ai/q-edge/blob/main/CHANGELOG.md"

[project.scripts]
qedge = "src.cli:main"
qedge-api = "src.backend.main:run_server"
qedge-worker = "src.quantum.worker:run_worker"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pennylane.*",
    "qiskit.*",
    "azure.*",
    "celery.*",
    "flwr.*",
    "pysyft.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
